added new query parameter notificationsDisabled to API to prevent spam when creating posts in bulk
